--- a/UI5.html
+++ b/UI5.html
@@ -88,7 +88,7 @@
   height: 120px;
   border-radius: 10%;
   /* สีพื้นหลังแต่ละ UI */
-  background-color: #00ffc8;
+  background-color: #c73535;
 }
 
     .ui {
